src/components/flashcards/cards/flashcard.css
.flashcard {
  width: 300px;
  height: 200px;
  border: 1px solid #333;
  border-radius: 20px;
  margin: 20px 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
  perspective: 1000px;
  position: relative;
  transition: transform 0.6s, box-shadow 0.3s ease;
  transform-style: preserve-3d;
}

.flashcard.clicked {
  width: 400px;
  height: 450px;
}

.flashcard.flipped {
  transform: rotateY(180deg);
}

.flashcard:hover {
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.flashcard-front,
.flashcard-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 20px;
  font-size: 10px;
  overflow: visible;
  padding: 10px;
}

.flashcard-front {
  background-color: rgb(216, 170, 17);
  position: relative;
}

.flashcard-back {
  transform: rotateY(180deg);
  background-image: url("beige-wooden-table-wooden-background.jpg");
}

.flashcard-text {
  display: block;
  font-size: 100%;
  font-weight: bold;
  text-align: center;
  font-family: Phantomsans, sans-serif;
  z-index: 1;
  white-space: normal;
  word-wrap: break-word;
  text-overflow: ellipsis;
  transition: opacity 0.3s ease;
}

.flashcard.clicked .flashcard-front .flashcard-text {
  opacity: 0;
}

.flashcard.clicked .flashcard-back .flashcard-text {
  opacity: 1;
  position: relative;
  color: black;
  padding: 10px;
}

.flashcard-back .flashcard-text {
  color: black;
}

.card-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 20px;
  position: absolute;
  top: 0;
  left: 0;
}

.flashcard-front .flashcard-text {
  position: absolute;
  bottom: 10px;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.7);
  color: white;
  padding: 5px;
  margin: 0;
  border-radius: 0 0 20px 20px;
}

#ingredients {
  text-align: left;
  width: 100%;
  margin: 0;
  padding: 0;
}

#ingredients-list {
  align-items: flex-start;
  margin-right: 0px;
  padding-left: 20px;
}
#instructions-list {
  list-style: decimal;
  margin-right: 10px;
}

h3 {
  text-decoration: underline;
}
h1 {
  text-decoration: underline;

  font-size: 30px;

  font-family: Phantomsans, sans-serif;
}

